# mcp-redmine

./: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml  test_comprehensive.py
src/mcp_redmine/: __init__.py  models.py  redmine_client.py  server.py
src/redmine_mcp/: models.py  redmine_client.py  server.py
