[project]
name = "mcp-redmine"
version = "0.1.0"
description = "Redmine MCP Server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_redmine"]

[project.scripts]
mcp-redmine = "mcp_redmine.server:main"
